--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,8 @@
 \crefname{notation}{Notation}{Notations}
 \crefname{setup}{Setup}{Setup}
 \crefname{question}{Question}{Question}
+\crefname{convention}{Convention}{Convention}
+
 
  %theorem style environments
 \newtheorem{theorem}{Theorem}[section]
@@ -47,7 +49,7 @@
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{notation}[theorem]{Notation}
-\newtheorem*{convention}{Convention}
+\newtheorem{convention}[theorem]{Convention}
 
 
 %numbering
