--- a/aip.tex
+++ b/aip.tex
@@ -353,17 +353,27 @@ The \emph{Newton polyhedron} of a monomial matrix $A$ with $d$ rows is the polyh
 where $\col(A)$ is the set of columns of $A$.  
 
 Recall that a proper subset $\O$ of $\N$ is a \emph{face} of $\N$ if there exists $\vv{a} \in \RR^d$ and $\alpha \in \RR$ are such that $\iprod{\vv{a}}{\vv{c}} \geq \alpha$ for all $\vv{c} \in \N$, with equality if and only if $\vv{c} \in \O$.
-We say that such a point $\vv{a}$ \emph{defines} $\O$ in $\N$.
-In this article, we will be concerned with faces $\O$ that do not lie in any coordinate subspace of $\RR^d$, which we call \emph{standard}.
-\textbf{When considering a point that defines a standard face, we will always assume that we have scaled the point so that $\bm{\alpha = 1}$}.
-\pedro{
-   Trying to emphasize this, as it's essential to understand some computations that will follow.
-   Maybe we should even use a ``Convention'' environment, and refer to it a couple of times, to remind the reader.
-}
+We say that such a point $\vv{a}$ \emph{defines} $\O$ in $\N$.  In this article, we are laregly concerned with faces $\O$ of $\N$ that do not lie in any coordinate subspace of $\RR^d$, which we call \emph{standard}.
 
+
+\daniel[inline]{I turned this into an ``official" convention.  I also emphasized that $\alpha$ must be positive when $\O$ is standard, which means we may rescale without changing inequalities}
+
+\begin{convention}
+\label{alpha=1: convention}
+Let $\O$ and $\vv{a} \in \RR^d$ and $\alpha \in \RR$ be as above.  If $\O$ is standard, then $\alpha$ must be positive, which allow us to rescale $\vv{a}$ so as to assume that $\alpha = 1$.   Thus, throughout this article, we always assume that we have normalized in this way when considering defining points of standard faces.
+\end{convention}
+
+\Cref{alpha=1: convention} leads to the following useful observation.
+
+\daniel[inline]{I like the idea to isolate this as a remark, given that we use it often.  I have elaborated a bit.  Should we make it a full-blown lemma or proposition?}
 \begin{remark}\label{rmk: inner product with columns of A}
-   In view of the above convention, if $\vv{a}$ defines a standard face $\O$ of the Newton polyhedron of $A$ and $\vv{s} \in \RR^n$ then $\iprod{\vv{a}}{A\vv{s}} \ge \norm{\vv{s}}$, and if $\vv{s}\ge \vv{0}$, then equality holds if and only if $s_i = 0$ whenever the $i$-th column of $A$ is not in $\O$.
+If $\vv{a} \in \RR^d$ defines a standard face $\O$ of $\N$, and $\vv{s} \in \RR^n$ has nonnegative coordinates, then $\iprod{\vv{a}}{A\vv{s}} \geq \norm{\vv{s}}$,  and equality holds if and only if $s_i = 0$ whenever the $i$-th column of $A$ is not in $\O$. \daniel{I added the condition that $\vv{s}$ be nonnegative.}
+
+
+Indeed, if $\vv{c}_i$ denotes the $i$-th column of $A$, then \Cref{alpha=1: convention} and the nonnegativity of $\vv{s}$ imply that $\iprod{\vv{a}}{\vv{c}_i} \cdot s_i \geq s_i$ for every $1 \leq i \leq n$, so that
+\[ \iprod{\vv{a}}{A\vv{s}} = \sum_{i=1}^n \iprod{\vv{a}}{\vv{c}_i} \cdot s_i \geq  \sum_{i=1}^n s_i  = \norm{\vv{s}}.\]
 \end{remark}
+
 
 The following proposition is well known to experts, but we include the short proof to keep the article self-contained.
 
@@ -375,6 +385,7 @@ The following proposition is well known to experts, but we include the short pro
 
 \daniel{I changed $\vv{c} \in \O$ to $\vv{u} \in \O$.  I think that the convention of these notes (at least, this is how it is in my head) is that letters lower in the alphabet (e.g., $\vv{a}, \vv{b}, \vv{c}$) represent points in the dual space to $\RR^d$ (that is, determine the linear function $\iprod{\vv{a}}{\cdot}$) and points higher in the alphabet $(e.g., \vv{u}, \vv{v}, \vv{w})$ represent points in $\RR^d$ itself}
 \pedro{That's a useful convention. I'll keep it in mind.}
+\daniel{We don't always stick to it.  E.g., the columns of $A$, and the standard basis vectors.}
 \begin{proof}
    If $\vv{u} \in \O$, then adding to $\vv{u}$ any nonnegative point in $\RR^d$ produces a point in $\N$.
    In particular, if $\iprod{\vv{a}}{\vv{u}} = \alpha$, then $\iprod{\vv{a}}{\vv{u} + \lambda \canvec_i} \geq \alpha$ for every standard basis vector $\canvec_i$ in $\RR^d$ and $\lambda > 0$.
@@ -416,48 +427,48 @@ In view of the Minkowski--Weyl Theorem (see \Cref{ss: euclidean spaces and conve
 \end{enumerate}
 \end{definition}     
 
-% \pedro[inline]{
-%    The way things are defined above, the collapse of $A$ is still a $d\times n$ matrix, where certain rows are filled with zeros (as opposed to having rows deleted).
-%    That makes perfect sense, but we'll have to do a couple of things to make the remarks and results that follow precise:
-%    \begin{itemize}
-%       \item Define ``monomial matrix in a coordinate subspace'' (rows corresponding to standard basis vectors in the coordinate subspace are nonzero; other rows are zero).
-%       The collapse of $A$ is, thus, a monomial matrix in $\rs(\O)^\perp$.
-%       \item Define ``Newton polyhedron in a coordinate subspace'' (the recession cone is not $\cone(\canvec_1,\ldots,\canvec_d)$; it's the cone generated by the canonical basis vectors in that coordinate subspace).
-%    \end{itemize}
-% }
+ \pedro[inline]{
+    The way things are defined above, the collapse of $A$ is still a $d\times n$ matrix, where certain rows are filled with zeros (as opposed to having rows deleted).
+    That makes perfect sense, but we'll have to do a couple of things to make the remarks and results that follow precise:
+    \begin{itemize}
+       \item Define ``monomial matrix in a coordinate subspace'' (rows corresponding to standard basis vectors in the coordinate subspace are nonzero; other rows are zero).
+       The collapse of $A$ is, thus, a monomial matrix in $\rs(\O)^\perp$.
+       \item Define ``Newton polyhedron in a coordinate subspace'' (the recession cone is not $\cone(\canvec_1,\ldots,\canvec_d)$; it's the cone generated by the canonical basis vectors in that coordinate subspace).
+    \end{itemize}
+ }
 
-% \daniel[inline]{I am a bit confused by this comment.  The way I see things, the matrix associated to the linear transformation \[ \RR^n \stackrel{A}{\xrightarrow{\hspace*{6mm}}} \RR^d \longrightarrow \rs(\O)^{\perp}\] must be of size $\# \rb(\O) \times n$, as specified by the dimensions of the source and target;  as I am implicitly using the canonical bases of $\RR^n$ and $\RR \rb(\O)$ to turn this transformation into a matrix, we should definitely get the matrix obtained by \emph{omitting} some rows of $A$.  On the other hand, if we instead looked at
-%    \[ \RR^n \stackrel{A}{\xrightarrow{\hspace*{6mm}}} \RR^d \longrightarrow \rs(\O)^{\perp}  \hookrightarrow \RR^d \]
-% then we would get a matrix obtained by replacing some rows of $A$ with zero.  
-% } 
-% \pedro[inline]{
-%    Since $\rs(\O)^\perp$ is contained in $\RR^d$ and bases were not mentioned, I interpreted ``matrix of the linear transformation'' as ``matrix with respect to the canonical bases of $\RR^n$ and $\RR^d$.''
-%    But now I understand your interpretation: that $\collapse{A}$ is the matrix of $\RR^n \to \rs(\O)^\perp$ \emph{with respect to the standard basis of $\RR^n$ and the basis $\rb(\O)^\perp$ of $\rs(\O)^\perp$.}
+ \daniel[inline]{I am a bit confused by this comment.  The way I see things, the matrix associated to the linear transformation \[ \RR^n \stackrel{A}{\xrightarrow{\hspace*{6mm}}} \RR^d \longrightarrow \rs(\O)^{\perp}\] must be of size $\# \rb(\O) \times n$, as specified by the dimensions of the source and target;  as I am implicitly using the canonical bases of $\RR^n$ and $\RR \rb(\O)$ to turn this transformation into a matrix, we should definitely get the matrix obtained by \emph{omitting} some rows of $A$.  On the other hand, if we instead looked at
+    \[ \RR^n \stackrel{A}{\xrightarrow{\hspace*{6mm}}} \RR^d \longrightarrow \rs(\O)^{\perp}  \hookrightarrow \RR^d \]
+ then we would get a matrix obtained by replacing some rows of $A$ with zero.  
+ } 
+ \pedro[inline]{
+    Since $\rs(\O)^\perp$ is contained in $\RR^d$ and bases were not mentioned, I interpreted ``matrix of the linear transformation'' as ``matrix with respect to the canonical bases of $\RR^n$ and $\RR^d$.''
+    But now I understand your interpretation: that $\collapse{A}$ is the matrix of $\RR^n \to \rs(\O)^\perp$ \emph{with respect to the standard basis of $\RR^n$ and the basis $\rb(\O)^\perp$ of $\rs(\O)^\perp$.}
 
-%    \medskip
+    \medskip
 
-%    Under your interpretation, multiplication by $\collapse{A}$ returns ``coordinate vectors''; under mine, it returns ``the
-%    real thing''; for this reason, I think I prefer mine.
-%    For instance, under your interpretation, $\collapse{A} \vv{k}$ (an element of $\RR^{\# \rb(\O)^\perp}$) is not the same as $\collapse{A\vv{k}}$ (an element of $\RR^d$); instead, $\collapse{A} \vv{k}$ is the coordinate vector of $\collapse{A\vv{k}}$ with respect to the basis $\rb(\O)^\perp$. 
-% }
-% \daniel[inline]{I've always thought of $\rs(\O)^{\perp}$ as $\operatorname{span}_{\RR} \rb(\O)^{\perp}$, and not an abstract $\RR^{\# \rb(\O)^{\perp}}$, and given that $\collapse{A} = [ \collapse{\vv{a}_1} \cdots \collapse{\vv{a}_n} ]$, I've interpreted the right-hand side of $\collapse{A \vv{k}} = \collapse{A} \vv{k}$ as $\sum \collapse{\vv{a}_i} k_i$.  But, I see your point about the RHS being a coordinate vector.  Maybe we should think about polyhedra defined by linear transformations instead.  Regardless, keeping a row of zeros in the collapse is odd to me geometrically;  even when we are drawing collapsed Newton polyhedra, we aren't drawing them in the larger Euclidean space.  Similarly, when we collapse a monomial ideal, we are thinking about it as a monomial ideal in a polynomial ring in fewer variables, all of which appear as generators for the collapsed ideal.  So, my strong preference is to omit rows, even if it means abusing some  notation, or implicitly identifying a coordinate vector with its representation in terms of a given basis, especially since every vector space in sight has a canonical basis.}
-% \pedro[inline]{
-%    My preference would be to keep zeros, and avoid abuse of notation; work always in the same $\RR^d$, and in the same polynomial ring.
-%    I don't really see a conflict between keeping zeros versus drawing things in a smaller space---if we have an object that lives in, say, $\RR^3$, but happens to be contained in some coordinate plane, it's natural to draw that object in the plane, instead of 3-space; we'd just say that we are only showing that subset of $\RR^3$.
+    Under your interpretation, multiplication by $\collapse{A}$ returns ``coordinate vectors''; under mine, it returns ``the
+    real thing''; for this reason, I think I prefer mine.
+    For instance, under your interpretation, $\collapse{A} \vv{k}$ (an element of $\RR^{\# \rb(\O)^\perp}$) is not the same as $\collapse{A\vv{k}}$ (an element of $\RR^d$); instead, $\collapse{A} \vv{k}$ is the coordinate vector of $\collapse{A\vv{k}}$ with respect to the basis $\rb(\O)^\perp$. 
+ }
+ \daniel[inline]{I've always thought of $\rs(\O)^{\perp}$ as $\operatorname{span}_{\RR} \rb(\O)^{\perp}$, and not an abstract $\RR^{\# \rb(\O)^{\perp}}$, and given that $\collapse{A} = [ \collapse{\vv{a}_1} \cdots \collapse{\vv{a}_n} ]$, I've interpreted the right-hand side of $\collapse{A \vv{k}} = \collapse{A} \vv{k}$ as $\sum \collapse{\vv{a}_i} k_i$.  But, I see your point about the RHS being a coordinate vector.  Maybe we should think about polyhedra defined by linear transformations instead.  Regardless, keeping a row of zeros in the collapse is odd to me geometrically;  even when we are drawing collapsed Newton polyhedra, we aren't drawing them in the larger Euclidean space.  Similarly, when we collapse a monomial ideal, we are thinking about it as a monomial ideal in a polynomial ring in fewer variables, all of which appear as generators for the collapsed ideal.  So, my strong preference is to omit rows, even if it means abusing some  notation, or implicitly identifying a coordinate vector with its representation in terms of a given basis, especially since every vector space in sight has a canonical basis.}
+ \pedro[inline]{
+    My preference would be to keep zeros, and avoid abuse of notation; work always in the same $\RR^d$, and in the same polynomial ring.
+    I don't really see a conflict between keeping zeros versus drawing things in a smaller space---if we have an object that lives in, say, $\RR^3$, but happens to be contained in some coordinate plane, it's natural to draw that object in the plane, instead of 3-space; we'd just say that we are only showing that subset of $\RR^3$.
 
-%    \medskip
+    \medskip
    
-%    If we go the other way, though, we should say right away that we will use coordinates with respect to the basis\footnote{Ordering the basis vectors, say, the natural way: by increasing indices.} $\rb(\O)^\perp$  to identify $\rs(\O)^\perp$ with $\RR^{\#\rb(\O)^\perp}$.
-%    OR, perhaps better, leave $\rs(\O)^\perp$ alone---don't make any identification---but define collapse as the composition of the maps
-%    \[\RR^d \stackrel{\text{proj}}{\longrightarrow} \rs(\O)^\perp \stackrel{\approx}{\longrightarrow} \RR^{\#\rb(\O)^\perp}.\]
-%    This seems to be how you're thinking of collapses.
-% }
+    If we go the other way, though, we should say right away that we will use coordinates with respect to the basis\footnote{Ordering the basis vectors, say, the natural way: by increasing indices.} $\rb(\O)^\perp$  to identify $\rs(\O)^\perp$ with $\RR^{\#\rb(\O)^\perp}$.
+    OR, perhaps better, leave $\rs(\O)^\perp$ alone---don't make any identification---but define collapse as the composition of the maps
+    \[\RR^d \stackrel{\text{proj}}{\longrightarrow} \rs(\O)^\perp \stackrel{\approx}{\longrightarrow} \RR^{\#\rb(\O)^\perp}.\]
+    This seems to be how you're thinking of collapses.
+ }
   
-% \daniel[inline]{I should also add that there are some advantages to thinking about $\collapse{A}$ is obtained from $A$ by omitting columns, as opposed to replacing them with zero.  For instance, this interpretation is key in \Cref{aux program: D}, when defining the constraints of $\ip$.  If we instead replaced rows with zeros, then the modified definition of $\ip$ would be more involved.}
-% \pedro[inline]{
-%    In a way, we are already getting around these issues, by saying things like ``$\vv{a}$ is positive in $\rs(\O)$'' (meaning $a_i$ is positive whenever $\canvec_i \in \rb(\O)$).
-%    I think from here, it's just a small step to saying things like ``$\vv{a} < \vv{b}$ in $\rs(\O)$'' (meaning $\vv{b} - \vv{a}$ is positive in $\rs(\O)$).
-% }
+ \daniel[inline]{I should also add that there are some advantages to thinking about $\collapse{A}$ is obtained from $A$ by omitting columns, as opposed to replacing them with zero.  For instance, this interpretation is key in \Cref{aux program: D}, when defining the constraints of $\ip$.  If we instead replaced rows with zeros, then the modified definition of $\ip$ would be more involved.}
+ \pedro[inline]{
+    In a way, we are already getting around these issues, by saying things like ``$\vv{a}$ is positive in $\rs(\O)$'' (meaning $a_i$ is positive whenever $\canvec_i \in \rb(\O)$).
+    I think from here, it's just a small step to saying things like ``$\vv{a} < \vv{b}$ in $\rs(\O)$'' (meaning $\vv{b} - \vv{a}$ is positive in $\rs(\O)$).
+ }
 \emily[inline]{
 OK, I finally got a chance to think carefully about this; thanks for waiting.  Although I see the points both ways, since we are motivated by algebra, I prefer to omit the rows rather than to have zero rows, in analog with moving to a polynomial ring in fewer variables, rather than remaining in the same ring. The geometry also simplifies
 in a very obvious way.   
@@ -628,6 +639,7 @@ Given a monomial matrix $A$ and a real number $\beta > 0 $, there are only finit
 \pedro[inline]{
    We can probably simplify this proof, as it is very believable that if $\vv{a}$ is nonnegative, then as $\vv{u}$ ranges over positive integral points, $\iprod{\vv{a}}{\vv{u}}$ takes on only finitely many values less than $\beta$ (when $a_i \ne 0$, this condition allows only finitely many choices for $u_i$; when $a_i = 0$, the value of $u_i$ does not affect the inner product).
 }
+\daniel[inline]{Your proof is way better, and should be the one we give in the paper.  I sometimes get too carried away with collapsing}
 
 \begin{proof}
    It suffices to show that there are only finitely many numbers $\ft{A}{\vv{u}}$ less than $\beta$ with $\mf(A, \vv{u}) = \O$ being fixed.
